--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: white;
+  @apply flex flex-col mt-20 mx-16 min-h-screen;
 }
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+header {
+  @apply fixed top-0 left-0 flex items-center w-full bg-primary justify-between px-8 text-gray-100 h-14;
+  
+}
+.active {
+  @apply text-secondary;
+}
+button {
+  @apply bg-secondary p-1 w-32
+}
+form {
+  @apply  flex flex-col gap-3 border-2 border-secondary p-4 rounded-lg mt-4 w-full items-center;
+  
+}
+form div,form h2,form button {
+  @apply flex flex-col items-center justify-center 
+}
+input {
+  @apply border border-gray-300 rounded-md px-4 py-2 focus:outline-none focus:border-primary;
 }
