--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,6 @@ form div,form h2,form button {
 input {
   @apply border border-gray-300 rounded-md px-4 py-2 focus:outline-none focus:border-primary;
 }
+.carCard{
+  @apply grid grid-cols-2  gap-5;
+}
